@@ -20,7 +20,7 @@ import statalign.postprocess.plugins.RNAalifoldResult;
  */
 public class RNAalifold {
 	
-	public static String executable = "/home/michael/Downloads/ViennaRNA-2.0.7/Progs/RNAalifold";
+	public static String executable = "RNAalifold.exe";
 	
 	static boolean useOldParams = false;
 	
@@ -40,11 +40,11 @@ public class RNAalifold {
 			RNAalifoldResult res = null;
 			try
 			{
-				res = RNAalifold.fold(sequences, sequenceNames,newparams);
+				res = RNAalifold.fold(sequences, sequenceNames,newparams, true);
 			}
 			catch(Exception ex)
 			{
-				System.err.println("The following error occured with RNAalifold: " + ex.getMessage());
+				//System.err.println("The following error occured with RNAalifold: " + ex.getMessage());
 			}
 			//System.out.println("HERE " + res);
 			if(res != null)
@@ -55,13 +55,13 @@ public class RNAalifold {
 			{
 				String oldparams = " -T " + 37 +" -cv " +  1 + " -nc " + 1 + " ";
 				useOldParams = true;
-				res = RNAalifold.fold(sequences, sequenceNames,oldparams);
+				res = RNAalifold.fold(sequences, sequenceNames,oldparams, true);
 				return res != null;
 			}
 		}
 		catch(Exception ex)
 		{
-			System.err.println("The following error occured with RNAalifold: " + ex.getMessage());
+		//	System.err.println("The following error occured with RNAalifold: " + ex.getMessage());
 		}
 
 		useOldParams = false;
@@ -69,12 +69,17 @@ public class RNAalifold {
 		return false;
 	}
 	
-	public static RNAalifoldResult fold(List<String> sequences, List<String> sequenceNames, String arguments) throws Exception
+	public static RNAalifoldResult fold(List<String> sequences, List<String> sequenceNames, String arguments)  throws Exception
 	{
-		return fold(sequences, sequenceNames, arguments, true);
+		return fold(sequences, sequenceNames, arguments, true, false);
 	}
 	
-	public static RNAalifoldResult fold(List<String> sequences, List<String> sequenceNames, String arguments, boolean useMatrix) throws Exception
+	public static RNAalifoldResult fold(List<String> sequences, List<String> sequenceNames, String arguments, boolean noErrorMessages) throws Exception
+	{
+		return fold(sequences, sequenceNames, arguments, true, noErrorMessages);
+	}
+	
+	public static RNAalifoldResult fold(List<String> sequences, List<String> sequenceNames, String arguments, boolean useMatrix, boolean noErrorMessages) throws Exception
 	{
 		if(useOldParams)
 		{
@@ -87,18 +92,34 @@ public class RNAalifold {
 		
 		try
 		{
+			String tempPath = System.getProperty("java.io.tmpdir")+"/";			
+			
 			System.out.println(arguments);
-			File tempClustalFile = new File("temp.clustalw");
+			File tempClustalFile = new File(tempPath+"temp.clustalw");
 			saveClustalW(sequences, sequenceNames, tempClustalFile);
-			String args = executable + " " + "-p "+arguments+" "+tempClustalFile.getAbsolutePath()+"";
-			//String args = executable + " " + "-p --bppmThreshold=0 "+arguments+" "+tempClustalFile.getAbsolutePath();
+			String args = executable + " " + "-p "+arguments;
+			String file = tempClustalFile.getAbsolutePath();
 			if(useOldParams)
 			{
-				args = executable + " " + "-p "+arguments+" \""+tempClustalFile.getAbsolutePath()+"\"";
+				args = executable + " " + "-p "+arguments;
 			}
-			//System.out.println("X"+useOldParams);
-			//System.out.println("Y"+args);
-			Process p = Runtime.getRuntime().exec(args);
+			
+			
+			// create a process builder to execute in temporary directory
+			ProcessBuilder processBuilder = new ProcessBuilder();			
+			processBuilder.directory(new File(tempPath));
+			ArrayList<String> commands = new ArrayList<String>();
+			String [] split = args.split("(\\s)+");
+			for(int i = 0 ; i < split.length ; i++)
+			{
+				commands.add(split[i]);
+			}
+			commands.add(file);
+			//System.out.println(commands);
+			processBuilder.command(commands);
+			
+			Process p = processBuilder.start();
+			
 			InputStream is = p.getErrorStream();
 			BufferedReader buffer = new BufferedReader(new InputStreamReader(is));
 			String textline = null;
@@ -120,8 +141,11 @@ public class RNAalifold {
 			//System.out.println(exitCode);
 			if(exitCode != 0)
 			{
+				if(!noErrorMessages)
+				{
 				System.err.println("RNAalifold generated the following error during execution:" +
 						"\n\"" + errorString+"\"");
+				}
 				return null;
 				//throw new Exception();
 				//System.out.println("The following error occured:");
@@ -131,9 +155,9 @@ public class RNAalifold {
 			RNAalifoldResult result = new RNAalifoldResult();
 			if(useMatrix)
 			{
-				result.matrix = loadBasePairProbMatrix(new File("alidot.ps"), sequences.get(0).length());
+				result.matrix = loadBasePairProbMatrix(new File(tempPath+"alidot.ps"), sequences.get(0).length());
 			}
-			result.pairedSites = RNAFoldingTools.getPairedSitesFromDotBracketString(loadDotBracketStructure(new File("alifold.out")));
+			result.pairedSites = RNAFoldingTools.getPairedSitesFromDotBracketString(loadDotBracketStructure(new File(tempPath+"alifold.out")));
 			return result;
 		}
 		catch(Exception ex)
@@ -230,8 +254,10 @@ public class RNAalifold {
 		ArrayList<String> sequences = new ArrayList<String>();
 		ArrayList<String> sequenceNames = new ArrayList<String>();
 		RNAFoldingTools.loadFastaSequences(new File("/home/michael/Dropbox/RNA and StatAlign/Distance/Datasets2/TestRNAData1_5seqs.dat.fas"), sequences, sequenceNames);
+		RNAalifold.executable="/home/michael/Downloads/ViennaRNA-2.0.7/Progs/RNAalifold";
 		RNAalifoldResult res = RNAalifold.fold(sequences, sequenceNames,"-T 10");
 		System.out.println(RNAFoldingTools.getDotBracketStringFromPairedSites(res.pairedSites));
+		
 		res = RNAalifold.fold(sequences, sequenceNames,"-T 60");
 		System.out.println(RNAFoldingTools.getDotBracketStringFromPairedSites(res.pairedSites));
 		//RNAalifold.saveClustalW(sequences, sequenceNames, new File("/home/michael/Desktop/temp.clustalw"));
